--- a/css/index.css
+++ b/css/index.css
@@ -92,6 +92,9 @@ main .home-bgc p:nth-child(1){
         cursor: pointer;
         position: relative;
     }
+    article section h2 a{
+        color: #2F9CF1;
+    }
     article section h2::after{
         content: "";
         width: 0;
@@ -138,7 +141,10 @@ main .home-bgc p:nth-child(1){
         color: #7F7F7F;
 
     }
-    article section .desc div:nth-child(3):hover{
+    article section .desc div:nth-child(3) a{
+        color: #7F7F7F;
+    }
+    article section .desc div:nth-child(3):hover a{
         color: #2F9CF1;
         cursor: pointer;
     }
