--- a/css/blog.css
+++ b/css/blog.css
@@ -96,7 +96,12 @@ article:hover{
     color: #9b59b6;
     border-bottom: 1px solid #2F9CF1;
 }
-
+.cmt h2{
+    font-size: 30px;
+    font-weight: 500;
+    border-bottom: 1px solid rgb(163, 163, 163);
+    padding-bottom: 20px;
+}
 .cmt .blogMsgs{
     margin: 30px 0;
     padding: 30px;
@@ -109,7 +114,7 @@ article:hover{
 .cmt .blogMsgs .msg{
     width: 100%;
     padding: 20px 0;
-    border-bottom: 1px solid #bebebe;
+    border-bottom: 1px dashed #bebebe;
 }
 .cmt .blogMsgs .msg .top{
     display: flex;
