--- a/css/blog.css
+++ b/css/blog.css
@@ -1,22 +1,25 @@
-main{
+main {
     width: 100%;
 }
-body{
+
+body {
     background-color: #F6F8F9;
 }
+
+
 /* 标题背景图片 */
 
-.bgcImg{
+.bgcImg {
     width: 100vw;
     height: 500px;
     background: url(/static/imgs/background1.jpg) no-repeat center center;
     background-size: cover;
     animation: arise 0.5s ease-in 0s 1;
     opacity: 0;
-    animation-fill-mode:forwards;
-
+    animation-fill-mode: forwards;
 }
-.bgcImg p.title{
+
+.bgcImg p.title {
     position: relative;
     top: 180px;
     font-size: 36px;
@@ -24,34 +27,39 @@ body{
     text-align: center;
     opacity: 0;
     animation: slideout 0.5s ease-in 0.3s 1;
-    animation-fill-mode:forwards;
+    animation-fill-mode: forwards;
 }
-.bgcImg .desc{
+
+.bgcImg .desc {
     position: relative;
     top: 200px;
     display: flex;
     justify-content: center;
     opacity: 0;
     animation: slideout 0.5s ease-in 0.5s 1;
-    animation-fill-mode:forwards;
-
+    animation-fill-mode: forwards;
 }
-.bgcImg .desc div{
+
+.bgcImg .desc div {
     padding: 10px 20px;
     color: #fff;
     font-size: 20px;
     display: flex;
     align-items: center;
 }
-.bgcImg .desc div span{
+
+.bgcImg .desc div span {
     display: inline-block;
     padding: 4px 6px;
 }
+
+
 /* 标题背景图片end */
+
 
 /* 文章 */
 
-article{
+article {
     width: 1000px;
     margin: 0 auto;
     padding: 30px;
@@ -59,36 +67,87 @@ article{
     margin-top: 40px;
     opacity: 0;
     animation: slideout 0.5s ease-in 0.2s 1;
-    animation-fill-mode:forwards;
+    animation-fill-mode: forwards;
+}
 
+article:hover {
+    box-shadow: 0 0 5px 8px #f0f0f0;
 }
-article:hover{
-    box-shadow:0 0 5px 8px #f0f0f0;
+
+article h1 {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 500;
+    color: #248C85;
+    margin-top: 0px;
 }
+
+article h3 {
+    font-weight: 400;
+}
+
+article h2 {
+    color: #FF6700;
+    font-weight: 400;
+}
+
+article p {
+    font-size: 20px;
+    font-weight: 300;
+    text-indent: 40px;
+    margin-top: 10px;
+}
+
+article span {
+    color: #2F9CF1;
+    font-size: 22px;
+    font-weight: 350;
+}
+
+article .box1 {
+    padding-left: 40px;
+}
+
+article img {
+    max-width: 700px;
+}
+
+article h4 {
+    color: #2F9CF1;
+    font-size: 21px;
+    font-weight: 400;
+}
+
 
 /* 文章end */
+
+
 /* 评论区 */
-.cmt{
+
+.cmt {
     width: 1000px;
     margin: 30px auto;
     opacity: 0;
     animation: slideout 0.5s ease-in 0.2s 1;
-    animation-fill-mode:forwards;
+    animation-fill-mode: forwards;
 }
-.cmt .write{
+
+.cmt .write {
     width: 100%;
     margin: 0 auto;
     background-color: #fff;
     padding: 30px;
 }
-.cmt .write:hover{
-    box-shadow:0 0 5px 8px #f0f0f0;
+
+.cmt .write:hover {
+    box-shadow: 0 0 5px 8px #f0f0f0;
 }
 
-.cmt .write img{
+.cmt .write img {
     vertical-align: -22px;
 }
-.cmt .write h2{
+
+.cmt .write h2 {
     padding-bottom: 10px;
     text-align: center;
     font-size: 36px;
@@ -96,72 +155,82 @@ article:hover{
     color: #9b59b6;
     border-bottom: 1px solid #2F9CF1;
 }
-.cmt h2{
+
+.cmt h2 {
     font-size: 30px;
     font-weight: 500;
     border-bottom: 1px solid rgb(163, 163, 163);
     padding-bottom: 20px;
 }
-.cmt .blogMsgs{
+
+.cmt .blogMsgs {
     margin: 30px 0;
     padding: 30px;
     background-color: #fff;
+}
 
+.cmt .blogMsgs:hover {
+    box-shadow: 0 0 5px 8px #f0f0f0;
 }
-.cmt .blogMsgs:hover{
-    box-shadow:0 0 5px 8px #f0f0f0;
-}
-.cmt .blogMsgs .msg{
+
+.cmt .blogMsgs .msg {
     width: 100%;
     padding: 20px 0;
     border-bottom: 1px dashed #bebebe;
 }
-.cmt .blogMsgs .msg .top{
+
+.cmt .blogMsgs .msg .top {
     display: flex;
     align-items: center;
 }
-.cmt .blogMsgs .msg .top .left img{
+
+.cmt .blogMsgs .msg .top .left img {
     width: 60px;
     display: block;
-    border-radius: 30px;  
-    box-shadow:0 0 5px 3px #f0f0f0;
-
+    border-radius: 30px;
+    box-shadow: 0 0 5px 3px #f0f0f0;
 }
-.cmt .blogMsgs .msg .top .right{
+
+.cmt .blogMsgs .msg .top .right {
     padding: 0px 10px;
 }
-.cmt .blogMsgs .msg .top .right .name{
+
+.cmt .blogMsgs .msg .top .right .name {
     font-size: 20px;
     color: #2F9CF1;
     padding-bottom: 8px;
-
 }
-.cmt .blogMsgs .msg .top .right .date{
+
+.cmt .blogMsgs .msg .top .right .date {
     font-size: 12px;
     color: #9c9c9c;
 }
-.cmt .blogMsgs .msg .bottom{
+
+.cmt .blogMsgs .msg .bottom {
     padding: 10px 20px;
     font-size: 20px;
     padding-top: 30px;
 }
+
+
 /* 评论区end */
 
-@keyframes slideout{
-    from{
+@keyframes slideout {
+    from {
         transform: translateY(-40px);
         opacity: 0;
     }
-    to{
+    to {
         opacity: 1;
         transform: translateY(0px);
     }
 }
-@keyframes arise{
-    from{
+
+@keyframes arise {
+    from {
         opacity: 0;
     }
-    to{
+    to {
         opacity: 1;
     }
 }
