--- a/css/blogSort.css
+++ b/css/blogSort.css
@@ -115,6 +115,7 @@ article section h2 {
     font-weight: 400;
     cursor: pointer;
     position: relative;
+    font-size: 28px;
 }
 
 article section h2 a {
@@ -139,13 +140,12 @@ article section h2:hover::after {
 
 article section .imgCtn {
     width: 100%;
-    text-align: center;
     padding-bottom: 10px;
 }
 
 article section img {
     object-fit: cover;
-    width: 80%;
+    width: 100%;
     max-height: 400px;
 }
 
