--- a/css/timeLine.css
+++ b/css/timeLine.css
@@ -5,7 +5,7 @@ main {
 .bgcImg {
     width: 100%;
     height: 300px;
-    background: url(/static/imgs/background3.jpg) no-repeat center center;
+    background: url(/static/imgs/background8.jpg) no-repeat center center;
     background-size: cover;
     animation: arise 0.5s ease-in 0s 1;
     opacity: 0;
@@ -14,6 +14,12 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.bgcImg p {
+    font-size: 30px;
+    color: #fff;
+    font-weight: 500;
 }
 
 article {
